--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                 <p>copyright &copy;2020 portfolio. designed by Ahra Ko</p>
             </div>
         </footer>
+        <div class="preloader">
+            <img src="../UX_UI_HW_19/images/Illustration-of-Loading-icon-on-transparent-background-PNG.png">
+        </div>
         <script src="js/index.js"></script>
     </body>
 </html>
