--- a/index.html
+++ b/index.html
@@ -3,124 +3,56 @@
         <link href="css/style.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-        
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8NHWT9XHGY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-8NHWT9XHGY');
-</script>
-
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
+        <style>
+            ul {
+              list-style-type: none;
+              margin: 0;
+              padding: 0;
+            }
+            
+            li {
+              display: inline;
+            }
+        </style>
     </head>
-
     <body>
-        <div class="wrap">
-            <div class="intro_bg">
-                <div class="header">
-                    <div class="homeArea">
-                        <ul class="homeButton">
-                            <li><a href="#">HOME</a></li>
-                        </ul>
-
-                    </div>
-                    <ul class="nav">
-                        <li><a href="#">PROJECT</a></li>
-                        <li><a href="#">RESUME</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
-                </div>
-                <div class="intro_text">
-                    <h1>Hello, My name is Ahra Ko.</h1>
-                    <h4 class="contents1">I am a UX.UI Designer, based in Toronto. I design to solve problems, engage people and create a delightful user experience.</h4>
-                </div>
-            </div>
+        <ul class="navBar">
+            <li style="float:left"><a class="Home" href="#about">HOME</a></li>
+            <li><a href="#news">CONTACT</a></li>
+            <li><a href="#contact">ABOUT ME</a></li>
+            <li><a href="#about">MY WORK</a></li>
+        </ul>
+        <div class="Hero">
+            <h1>Hello, my name is Ahra Ko</h1>
+            <h2>I am a UX/UI designer, based in Toronto.</h2>
+            <h2>I design to solve problems, engage people and create a delightful user experience.</h2>
         </div>
-
+        <div class="Project">
+            <h3>My Work</h3>
+            <div class="Project1"></div>
+            <div class="Project2"></div>
+            <div class="Project3"></div>
+        </div>
         <div class="Logo">
-            <img src="images/Logo_ocean.png">
-        </div>
-
-        <section class="mySkills">
-            <h2>My UX Skills</h2>
-            <h4>I am a Toronto-based UX designer who is dedicated to delivering outstanding and meaningful user experiences. My technical background and user-focused approach complement my knack for crafting compelling digital products through the use of evidence-based design.</h4>
-            <div class="flexContainer">
-                <img>
-                <p>User Research / Usability Testing / Heuristic Evaluation</p>
-                <p>Personal Creation / Affinity Diagramming / Responsive Design</p>
-                <p>Information Architecture / Wireframe Production / Prototyping</p>
-            </div>
-        </section>
-
-        <div class="main_text">
-            <h2>My Work</h2>
-            <ul class="contents">
-                <li class="CaseStudy">
-                    <div class="CRA">
-                    </div>
-                    <div class="CRA_text">
-                        <h3>Redesigning Canada Revenue Agency</h3>
-                        <h4>Delivered an understandable way to allow users to conveniently navigate to the desired destination on the CRA website.</h4>
-                        <button type="button">View case study</button>
-                    </div>
-                </li>
-                <li class="CaseStudy2">
-                    <div class="Dogs">
-                    </div>
-                    <div class="Dogs_text">
-                        <h3>Redesigning Forever Freed Dogs Website</h3>
-                        <h4>Redesigned the non-profit dog rescue website to help more dogs find their forever homes.</h4>
-                        <button type="button">View case study</button>
-                    </div>
-                </li>
-                <li class="CaseStudy3">
-                    <div class="Phonebox">
-                    </div>
-                    <div class="Phonebox_text">
-                        <h3>Redesigning HTML email templates</h3>
-                        <h4>Redesigned the HTML email templates for better customer experiences and enhanced communication.</h4>
-                        <button type="button">View case study</button>
-                    </div>
-                </li>
-                <li class="CaseStudy4">
-                    <div class="Travel">
-                    </div>
-                    <div class="Travel_text">
-                        <h3>Developing Travel Mobile App</h3>
-                        <h4>Suggested a mobile application for travellers who want to meet other travellers on their trips</h4>
-                        <button type="button">View case study</button>
-                    </div>
-                </li>
-            </ul>
-        </div>
-
-        <div class="logo_story">
-            <h2>My Logo Story</h2>
+            <h3>My Logo Story</h3>
+            <img src="../UX_UI_HW_19/images/Logo_ocean.png" class="logoImg">
             <h4>This was made by me on Adobe Photoshop. All the lines and dots are from my name, 아라.</h4>
             <h4>Most Korean names are written in Chinese characters. So, the sound and meaning are different can it can be written in both Korean and Chinese characters.</h4>
             <h4>However, my name is made in pure Korean and it has only one form. Therefore, I made my logo by transforming my Korean name into the form of "Hun-min-jeong-um", which is the origin of Korean.</h4>
-            <h4>아라 means "Ocean".</h4>
-            <img src="images/hunminjeongum.jpeg">
+            <h4>아라 mena "Ocean".</h4>
         </div>
-        <footer>
-            <div class="footer_content">
-                <h3>Ahra Ko's portfolio</h3>
-                <ul class="Socials">
-                    <li><a href="#">LinkedIn</a></li>
-                    <li><a href="#">Instagram</a></li>
-                </ul>
-            </div>
-            <div class="footer_bottom">
-                <p>copyright &copy;2020 portfolio. designed by Ahra Ko</p>
-            </div>
-        </footer>
-        <div class="preloader">
-            <img src="../UX_UI_HW_19/images/Illustration-of-Loading-icon-on-transparent-background-PNG.png">
-        </div>
-        <script src="js/index.js"></script>
+
     </body>
+    <script src="js/index.js"></script>
+    <footer>
+        <p class="FooterTitle">Ahra Ko's Portfolio</p>
+        <li>LinkedIn</li>
+        <li>Instagram</li>
+        <p><a href="mailto:araincanada@gmail.com">araincanada@gmail.com</a></p>
+        <p>copyright ©2022 portfolio. designed by Ahra K</p>
+    </footer>
 </html>
