--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
         <style>
             ul {
               list-style-type: none;
@@ -45,7 +54,9 @@
         </div>
         <div class="Project">
             <h3>My Work</h3>
-            <div class="Project1"></div>
+            <div class="Project1">
+                <button class="button"><a href="https://ahra-ko.github.io/UX_UI_HW_20/">View Case Study >></a></button>
+            </div>
             <div class="Project2"></div>
             <div class="Project3"></div>
         </div>
@@ -54,7 +65,8 @@
             <img src="../UX_UI_HW_19/images/Logo_ocean.png" class="logoImg">
             <h4>This was made by me on Adobe Photoshop. All the lines and dots are from my name, 아라.</h4>
             <h4>Most Korean names are written in Chinese characters. So, the sound and meaning are different can it can be written in both Korean and Chinese characters.</h4>
-            <h4>However, my name is made in pure Korean and it has only one form. Therefore, I made my logo by transforming my Korean name into the form of "Hun-min-jeong-um", which is the origin of Korean.</h4>
+            <h4>However, my name is made in pure Korean and it has only one form. </h4>
+            <h4>Therefore, I made my logo by transforming my Korean name into the form of "Hun-min-jeong-um", which is the origin of Korean.</h4>
             <h4>아라 mena "Ocean".</h4>
         </div>
 
@@ -62,8 +74,8 @@
     <script src="js/index.js"></script>
     <footer>
         <p class="FooterTitle">Ahra Ko's Portfolio</p>
-        <li>LinkedIn</li>
-        <li>Instagram</li>
+        <div class="linkedin"></div>
+        <div class="instagram"></div>
         <p><a href="mailto:araincanada@gmail.com">araincanada@gmail.com</a></p>
         <p>copyright ©2022 portfolio. designed by Ahra K</p>
     </footer>
