--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul class="navBar">
             <li style="float:left"><a class="Home" href="#about">HOME</a></li>
             <li><a href="#news">CONTACT</a></li>
-            <li><a href="#contact">ABOUT ME</a></li>
+            <li><a href="https://ahra-ko.github.io/UX_UI_HW_21/">ABOUT ME</a></li>
             <li><a href="#about">MY WORK</a></li>
         </ul>
         <div class="Hero">
